--- a/index.html
+++ b/index.html
@@ -6,9 +6,17 @@
       <link rel="stylesheet" href="style.css">
    </head>
    <body>
+      <div>
+         <div id="particles-js"></div>
+      </div>
       <header>
-         <div class="stars-container"></div>
+         <div class="stars"></div>
+         <div class="twinkle"></div>
       </header>
+      <div class="head">
+         <div class="animation-target"></div><p class="blinking-text"></p>
+      </div>
+      <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
       <script src="script.js"></script>
    </body>
 </html>
