--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
       <meta charset="utf-8" content="width=device-width, initial-scale=1">
       <title>Portfolio Landing Page</title>
       <link rel="stylesheet" href="style.css">
+      <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
    </head>
    <body>
       <div>
